Fix alignement and increase general max width

--- a/src/app/[locale]/(main)/page.module.scss
+++ b/src/app/[locale]/(main)/page.module.scss
@@ -1,7 +1,6 @@
 .root {
   width: 100%;
   height: 100%;
-  padding: var(--page-padding);
   @include flexCenter(column, center);
 
   @include respond-to('medium') {
